--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "tsc -p tsconfig-build.json",
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
