--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
   },
   "homepage": "https://github.com/RonaldGuilhermePDS/Test-Chat2Desk#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "eslint": "^8.31.0",
+    "eslint-config-standard-with-typescript": "^26.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "typescript": "^4.9.4"
   }
 }
