--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,14 @@
   ],
   "rules": {
     "import/export": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "semi": true,
+        "singleQuote": false,
+        "endOfLine": "auto"
+      }
+    ],
     "@typescript-eslint/comma-spacing": "off",
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/no-misused-promises": "off",
