chore: add git commit msg linter

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
+    "git-commit-msg-linter": "^4.5.0",
     "lefthook": "^1.2.6",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
