--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "tsc -p tsconfig-build.json",
     "start": "node dist/server.js",
-    "test": "jest --passWithNoTests --runInBand --no-cache"
+    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test:unit": "npm test -- --watch -c jest-unit-config.js"
   },
   "repository": {
     "type": "git",
