--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc -p tsconfig-build.json",
     "start": "node dist/server.js",
     "test": "jest --passWithNoTests --runInBand --no-cache",
-    "test:unit": "npm test -- --watch -c jest-unit-config.js"
+    "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:integration": "npm test -- --watch -c jest-integration-config.js"
   },
   "repository": {
     "type": "git",
