--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node dist/server.js",
     "test": "jest --passWithNoTests --runInBand --no-cache",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
-    "test:integration": "npm test -- --watch -c jest-integration-config.js"
+    "test:integration": "npm test -- --watch -c jest-integration-config.js",
+    "test:staged": "npm test -- --findRelatedTests"
   },
   "repository": {
     "type": "git",
