--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/RonaldGuilhermePDS/Test-Chat2Desk#readme",
   "devDependencies": {
     "@types/jest": "^29.2.5",
+    "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
@@ -41,5 +42,8 @@
     "prettier": "^2.8.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
