--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
       }
     ],
     "@typescript-eslint/comma-spacing": "off",
+    "@typescript-eslint/consistent-type-assertions": "off",
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/no-namespace": "off",
