--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig-build.json",
-    "start": "node dist/server.js",
     "test": "jest --passWithNoTests --runInBand --no-cache",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
@@ -40,10 +39,12 @@
     "lefthook": "^1.2.6",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
+    "prisma": "^4.8.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.8.1",
     "argon2": "^0.30.3",
     "validator": "^13.7.0"
   }
