--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "build": "tsc -p tsconfig-build.json",
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --runInBand --no-cache",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/RonaldGuilhermePDS/Test-Chat2Desk#readme",
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
@@ -40,12 +41,14 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "prisma": "^4.8.1",
+    "sucrase": "^3.29.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@prisma/client": "^4.8.1",
     "argon2": "^0.30.3",
+    "express": "^4.18.2",
     "validator": "^13.7.0"
   }
 }
