--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "eslint": "^8.31.0",
@@ -42,6 +43,7 @@
     "prettier": "^2.8.1",
     "prisma": "^4.8.1",
     "sucrase": "^3.29.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   },
