feat: add docker control with .env

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,27 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+#export DATABASE_URL="postgresql://postgres:password@localhost:5432/postgres?schema=public"
+export DATABASE_URL="postgresql://postgres:password@localhost:5432/postgres?schema=public"
 
-DATABASE_URL="postgresql://postgres:password@localhost:5432/postgres?schema=public"
+# Should Docker restart your containers if they go down in unexpected ways?
+#export DOCKER_RESTART_POLICY=unless-stopped
+export DOCKER_RESTART_POLICY=no
+
+# the internet without assistance from a cloud based firewall.
+#export DOCKER_API_PORT_FORWARD=127.0.0.1:3000
+export DOCKER_API_PORT_FORWARD=3000
+
+# You'll always want to set POSTGRES_USER and POSTGRES_PASSWORD since the
+# postgres Docker image uses them for its default database user and password.
+export POSTGRES_DB=postgres
+#export POSTGRES_HOST=localhost
+#export POSTGRES_PORT=5432
+export POSTGRES_USER=postgres
+export POSTGRES_PASSWORD=password
+
+# What CPU and memory constraints will be added to your services? When left at
+# 0, they will happily use as much as needed.
+#export DOCKER_POSTGRES_CPUS=0
+#export DOCKER_POSTGRES_MEMORY=0
+#export DOCKER_API_CPUS=0
+#export DOCKER_API_MEMORY=0
