--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
-    "prepare": "npx prisma db push"
+    "prepare:prisma": "npx prisma db push"
   },
   "repository": {
     "type": "git",
